[gd_scene load_steps=3 format=2]

[ext_resource path="res://Other/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Towers/BaseProjectile.gd" type="Script" id=2]

[node name="BaseProjectile" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_mask = 8
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
